--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
         # The following versions are the 'default' for tests, unless
         # overidden underneath. They are defined here in order to save having
         # to repeat them for all configurations.
-        - NUMPY_VERSION=stable
+        - NUMPY_VERSION=1.14
         - ASTROPY_VERSION=stable
         - POPPY_VERSION=development
         - CONDA_INSTALL='conda install --yes'
