--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ language: python
 sudo: false
 
 python:
-    - 2.7
-    - 3.5
+    - 3.6
 
 addons:
     apt:
@@ -18,27 +17,29 @@ addons:
 env:
     global:
         # The following versions are the 'default' for tests, unless
-        # overidden underneath. They are defined here in order to save having
+        # overridden underneath. They are defined here in order to save having
         # to repeat them for all configurations.
-        - NUMPY_VERSION=1.14
+        - NUMPY_VERSION=stable
         - ASTROPY_VERSION=stable
         - POPPY_VERSION=development
         - CONDA_INSTALL='conda install --yes'
         - PIP_INSTALL='pip install'
+        # For headless testing of code that imports PyPlot:
+        - MPLBACKEND=Agg
     matrix:
+        # Make sure that egg_info works without dependencies
         - SETUP_CMD='egg_info'
 
 matrix:
     include:
+        # do the actual tests.
         # Do a coverage test in Python 3.
         #- python: 3.5
         #  env: SETUP_CMD='test --coverage'
 
         # Try all supported Python versions with the latest NumPy
         # and other dependencies
-        - python: 2.7
-          env: SETUP_CMD='test'
-        - python: 3.5
+        - python: 3.6
           env: SETUP_CMD='test'
 
               
@@ -57,44 +58,17 @@ before_install:
     - conda update --yes conda
 
 install:
-
-    # CONDA
-    - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
-    - source activate test
-
-    # CORE DEPENDENCIES
-    - $CONDA_INSTALL numpy=$NUMPY_VERSION pytest pip Cython jinja2
-    - $PIP_INSTALL pytest-xdist
-
-    # ASTROPY
-    - if [[ $ASTROPY_VERSION == development ]]; then $PIP_INSTALL git+http://github.com/astropy/astropy.git#egg=astropy; fi
-    - if [[ $ASTROPY_VERSION == stable ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION astropy; fi
-
-    # OPTIONAL DEPENDENCIES
-    # Here you can add any dependencies your package may have. You can use
-    # conda for packages available through conda, or pip for any other
-    # packages. You should leave the `numpy=$NUMPY_VERSION` in the `conda`
-    # install since this ensures Numpy does not get automatically upgraded.
-    - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION matplotlib scipy; fi
-    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL six enum34; fi
-
-    # POPPY
-    - if [[ $POPPY_VERSION == development ]]; then $PIP_INSTALL git+http://github.com/mperrin/poppy.git#egg=poppy; fi
-    - if [[ $POPPY_VERSION == stable ]]; then $PIP_INSTALL poppy; fi
-
-    # DOCUMENTATION DEPENDENCIES
-    # build_sphinx needs sphinx and matplotlib (for plot_directive). Note that
-    # this matplotlib will *not* work with py 3.x, but our sphinx build is
-    # currently 2.7, so that's fine
-    - if [[ $SETUP_CMD == build_sphinx* ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION Sphinx matplotlib; fi
-
+    # See https://github.com/astropy/ci-helpers for docs on
+    # how this setup works
+    - git clone --depth 1 git://github.com/astropy/ci-helpers.git
+    - source ci-helpers/travis/setup_conda.sh
     # COVERAGE DEPENDENCIES
     - if [[ $SETUP_CMD == 'test --coverage' ]]; then $PIP_INSTALL coverage coveralls; fi
 
 before_script:
 
 script:
-    - python setup.py $SETUP_CMD
+   - python setup.py $SETUP_CMD
 
 after_success:
     # If coveralls.io is set up for this package, uncomment the line
@@ -103,5 +77,5 @@ after_success:
     - if [[ $SETUP_CMD == 'test --coverage' ]]; then coveralls --rcfile='gpypsfs/tests/coveragerc'; fi
 
 notifications:
-    email:
-        - mperrin@stsci.edu
+  email:
+    - mperrin@stsci.edu
